@@ -7,6 +7,7 @@
 - 2021-05-19                                -
 ---------------------------------------------
 .: WSM: BugFix - Encode category name  (WSM-363)
+.: WSM: BugFix - Promotion in invoice is not able to remove (WSM-356)
 
 - v1.0.10922                                -
 ---------------------------------------------
